# uvr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: Dockerfile  bench.sh  run-in-docker.sh  update-readme.sh  uvr-ggplot2.toml  uvr-jsonlite.toml  uvr-tidyverse.toml
crates/uvr/: Cargo.toml  build.rs
crates/uvr-core/: Cargo.toml  build.rs
crates/uvr-core/src/: checksum.rs  config.rs  dcf.rs  env_vars.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  project.rs  signal.rs  sysreqs.rs  sysreqs_rules.rs
crates/uvr-core/src/installer/: binary_install.rs  download.rs  mod.rs  package_cache.rs  r_cmd_install.rs
crates/uvr-core/src/r_version/: detector.rs  downloader.rs  manager.rs  mod.rs  openmp.rs
crates/uvr-core/src/registry/: bioconductor.rs  cran.rs  forgejo.rs  github.rs  mod.rs  p3m.rs
crates/uvr-core/src/resolver/: graph.rs  mod.rs
crates/uvr-core/tests/: extract_real_tarball.rs  forgejo_live.rs
crates/uvr/src/: cli.rs  main.rs
crates/uvr/src/commands/: add.rs  cache.rs  completions.rs  doctor.rs  export.rs  import.rs  init.rs  lock.rs  mod.rs  remove.rs  run.rs  scan.rs  self_update.rs  sync.rs  tree.rs  update.rs  util.rs
crates/uvr/src/commands/r_cmd/: install.rs  javareconf.rs  list.rs  mod.rs  pin.rs  uninstall.rs  use_version.rs
crates/uvr/src/ui/: glyph.rs  mod.rs  palette.rs  print.rs  progress.rs
crates/uvr/tests/: cli_tests.rs
docs/: index.html  reddit-update-post-v2.md  reddit-update-post.md
docs/superpowers/plans/: 2026-05-26-forgejo-remote-support.md
docs/superpowers/specs/: 2026-05-26-forgejo-remote-support-design.md  2026-07-23-uv-feature-parity-design.md
r-package/: DESCRIPTION  NAMESPACE  README.md
r-package/R/: find_uvr.R
r-package/man/: uvr-package.Rd
r-package/tests/testthat/: test-find_uvr.R
tests/fixtures/rpkgs-stub/src/contrib/: PACKAGES
tests/fixtures/sample_project/: uvr.toml
