[workspace]
members = ["crates/uvr", "crates/uvr-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["uvr contributors"]
license = "MIT"
repository = "https://github.com/nbafrank/uvr"
homepage = "https://github.com/nbafrank/uvr"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "color", "env"] }
clap_complete = "4"
indicatif = "0.17"
console = "0.15"
flate2 = "1"
tar = "0.4.45"
dirs = "5"
which = "6"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tracing = "0.1"
serde_json = "1"
urlencoding = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"
