[package]
name = "uvr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for uvr — R virtual environment manager"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
indicatif.workspace = true
console.workspace = true
flate2.workspace = true
tar.workspace = true
dirs.workspace = true
which.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tempfile.workspace = true
tracing.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
zip.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
