[package]
name = "uvr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "uv-style project-centric dependency manager for R"

[[bin]]
name = "uvr"
path = "src/main.rs"

[dependencies]
uvr-core = { path = "../uvr-core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
console.workspace = true
indicatif.workspace = true
dirs.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
semver.workspace = true
tempfile.workspace = true
ureq.workspace = true

[target.'cfg(windows)'.build-dependencies]
# Embed a Win32 application manifest declaring `supportedOS` GUIDs from
# Windows 7 through Windows 11. Without this, recent Windows 11 builds
# reject the unmanifested binary at exec time with "This version of …
# uvr.exe is not compatible with the version of Windows you're running."
# (See #74 — confirmed via PE-header inspection of the v0.3.3 release
# artifact: no resource directory, no manifest at all.)
embed-manifest = "1.4"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
